<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.italo.calculadora.MainActivity">

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="152dp"
        android:text="@string/btn_1" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn1"
        android:layout_toEndOf="@+id/btn1"
        android:text="@string/btn_2" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn2"
        android:layout_toEndOf="@+id/btn2"
        android:text="@string/btn_3" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn1"
        android:layout_below="@+id/btn1"
        android:text="@string/btn_4" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn2"
        android:layout_toEndOf="@+id/btn4"
        android:text="@string/btn_5" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn3"
        android:layout_toEndOf="@+id/btn5"
        android:text="@string/btn_6" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn4"
        android:layout_below="@+id/btn4"
        android:text="@string/btn_7" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn5"
        android:layout_toEndOf="@+id/btn7"
        android:text="@string/btn_8" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn6"
        android:layout_toEndOf="@+id/btn8"
        android:text="@string/btn_9" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn8"
        android:layout_toEndOf="@+id/btn7"
        android:text="@string/btn_0" />

    <Button
        android:id="@+id/btnC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn0"
        android:layout_alignStart="@+id/btn7"
        android:text="@string/btn_C" />

    <Button
        android:id="@+id/btnEqual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn9"
        android:layout_toEndOf="@+id/btn0"
        android:text="@string/btn_equal" />

    <Button
        android:id="@+id/btnAdict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn3"
        android:layout_toEndOf="@+id/btn3"
        android:text="@string/btn_adict" />

    <Button
        android:id="@+id/btnSubtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAdict"
        android:layout_toEndOf="@+id/btn6"
        android:text="@string/btn_subtract" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSubtract"
        android:layout_toEndOf="@+id/btn9"
        android:text="@string/btn_divide" />

    <Button
        android:id="@+id/btnMultiple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnDivide"
        android:layout_below="@+id/btn9"
        android:text="@string/btn_multiple" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn2"
        android:layout_alignEnd="@+id/btnAdict"
        android:layout_alignStart="@+id/btn1"
        android:layout_marginBottom="16dp" />

</RelativeLayout>
